--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -66,7 +66,7 @@
             <objects>
                 <viewController storyboardIdentifier="PersonalProgramTKCalendarDayViewController" id="qBv-ti-Psr" customClass="PersonalProgramTKCalendarDayViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9pe-7h-TRE">
-                        <rect key="frame" x="0.0" y="64" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adV-Kh-K5h">
@@ -82,11 +82,17 @@
                                     <segue destination="BoZ-sp-bTT" kind="push" identifier="segue6" id="5s0-9K-Shm"/>
                                 </connections>
                             </button>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dta-eG-iTx">
+                                <items/>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="adV-Kh-K5h" secondAttribute="trailing" constant="85" id="CDU-iv-Ye4"/>
                             <constraint firstItem="adV-Kh-K5h" firstAttribute="top" secondItem="9pe-7h-TRE" secondAttribute="top" constant="190" id="Et5-OL-bCT"/>
+                            <constraint firstItem="dta-eG-iTx" firstAttribute="leading" secondItem="9pe-7h-TRE" secondAttribute="leading" type="default" id="G0C-VM-f8q"/>
+                            <constraint firstItem="dta-eG-iTx" firstAttribute="trailing" secondItem="9pe-7h-TRE" secondAttribute="trailing" type="default" id="InX-Wh-x9D"/>
+                            <constraint firstItem="dta-eG-iTx" firstAttribute="bottom" secondItem="9pe-7h-TRE" secondAttribute="bottom" type="default" id="TCV-Ym-Vfg"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="bpu-1F-FdQ">
@@ -98,9 +104,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="navigationBar" destination="bpu-1F-FdQ" id="YgW-JB-AxY"/>
+                        <outlet property="toolbar" destination="dta-eG-iTx" id="sOW-Qh-0On"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S0M-QI-1zM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1353,6 +1359,7 @@
         <class className="AllNetworkingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNetworkingViewController.h"/>
             <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
                 <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
@@ -1392,6 +1399,9 @@
         <class className="EventUIViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/EventUIViewController.h"/>
             <relationships>
+                <relationship kind="action" name="addNote:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="action" name="goToRoom:" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="addNoteButton" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="info" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationItem"/>
@@ -1419,6 +1429,7 @@
         <class className="ImageViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ImageViewController.h"/>
             <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
             </relationships>
@@ -1446,6 +1457,7 @@
         <class className="NetworkingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingViewController.h"/>
             <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
                 <relationship kind="outlet" name="networkingTitle" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="personName" candidateClass="UIButton"/>
@@ -1458,6 +1470,7 @@
                 <relationship kind="action" name="addNote:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="action" name="addPerson:" candidateClass="UIButton"/>
                 <relationship kind="action" name="addSession:" candidateClass="UIButton"/>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="aboutPersonButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="aboutSessionButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="noteTextView" candidateClass="UITextView"/>
@@ -1466,6 +1479,7 @@
         <class className="NotificationViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationViewController.h"/>
             <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
                 <relationship kind="outlet" name="notificationDate" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="notificationName" candidateClass="UILabel"/>
@@ -1474,6 +1488,8 @@
         <class className="PersonProfileViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonProfileViewController.h"/>
             <relationships>
+                <relationship kind="action" name="addNote:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="addNote" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
